# mopro-anon-aadhaar

./: .gitignore  Cargo.toml  Config.toml  README.md
.github/workflows/: release.yml
MoproiOSBindings/: mopro.swift
MoproiOSBindings/MoproBindings.xcframework/ios-arm64/Headers/: moproFFI.h
ios/MoproiOSBindings/: mopro.swift
ios/MoproiOSBindings/MoproBindings.xcframework/ios-arm64/Headers/: moproFFI.h
react-native/: README.md  package-lock.json  package.json
react-native/app/(tabs)/: index.tsx  input.ts
react-native/modules/mopro/: index.ts
react-native/modules/mopro/ios/: MoproModule.swift
src/: lib.rs
